#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

[build-system]
requires = [
  "scikit-build-core>=0.12", "pybind11",
]
build-backend = "scikit_build_core.build"

[project]
name = "inlong-dataproxy-sdk"
version = "2.3.0"
description = "Python bindings for Apache InLong DataProxy SDK"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Apache InLong" },
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/apache/inlong"
Source = "https://github.com/apache/inlong/tree/master/inlong-sdk/dataproxy-sdk-twins/dataproxy-sdk-python"

[tool.scikit-build]
minimum-version = "0.12"

# Do NOT run CMake when building sdist.
sdist.cmake = false

# Make sdist minimal via a strict allowlist.

sdist.inclusion-mode = "manual"

# First exclude all files
sdist.exclude = [
  "**/*",
]

# Then only include necessary files
# NOTICE: sdist.include always takes precedence over sdist.exclude
sdist.include = [
  # --- Python binding sources/build config ---
  "/pyproject.toml",
  "/CMakeLists.txt",
  "/inlong_dataproxy.cpp",
  "/inlong_dataproxy.pyi",
  "/README.md",

  # Headers referenced by current CMake include_directories
  "/dataproxy-sdk-cpp/src/core/*.h",

  # Static libraries used by linking
  "/dataproxy-sdk-cpp/release/lib/*.a",
  "/dataproxy-sdk-cpp/third_party/lib/*.a",
  "/dataproxy-sdk-cpp/third_party/lib64/*.a",
]
